50.Box sizing border box to fix collapse for float layout

--- a/03-CSS-Fundamentals/style.css
+++ b/03-CSS-Fundamentals/style.css
@@ -3,6 +3,7 @@
 	/* border-top: 10px solid #1098ad; */
 	margin: 0;
 	padding: 0;
+	box-sizing: border-box;
 }
 
 /* the body selector will apply all rules by inheritance to its child elements */
@@ -37,8 +38,8 @@ aside {
 	background-color: #f7f7f7;
 	border-top: 5px solid #1098ad;
 	border-bottom: 5px solid #1098ad;
-	padding: 50px 0px;
-	width: 500px;
+	padding: 50px 40px;
+	box-sizing: border-box;
 }
 
 article {
@@ -73,6 +74,7 @@ h4 {
 	font-size: 20px;
 	text-transform: uppercase;
 	text-align: center;
+	margin-bottom: 30px;
 }
 
 ul,
@@ -122,8 +124,9 @@ li:last-child {
 	font-weight: bold;
 }
 
-.removeBulletpoint {
+.related {
 	list-style: none;
+	margin-left: 0;
 }
 
 /* body {
